tests/ui/rpc/fail/sync_function_not_returning_stream.stderr
error[E0277]: the trait bound `std::string::String: futures_core::stream::Stream` is not satisfied
 --> tests/ui/rpc/fail/sync_function_not_returning_stream.rs:8:8
  |
8 |     fn test(&mut self) -> String {
  |        ^^^^ the trait `futures_core::stream::Stream` is not implemented for `std::string::String`
  |
  = help: the following other types implement trait `futures_core::stream::Stream`:
            &mut S
            Abortable<St>
            AssertUnwindSafe<S>
            Box<S>
            Buffer<S, Item>
            BufferUnordered<St>
            Buffered<St>
            Either<A, B>
          and $N others
note: required by a bound in `DependencyMap::add_stream_output`
 --> core/src/lib.rs
  |
  |     pub fn add_stream_output<F, S, T>(&mut self, _: F)
  |            ----------------- required by a bound in this associated function
...
  |         S: futures::Stream<Item = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `DependencyMap::add_stream_output`

error[E0277]: the trait bound `std::string::String: futures_core::stream::Stream` is not satisfied
 --> tests/ui/rpc/fail/sync_function_not_returning_stream.rs:6:1
  |
6 | #[rpc]
  | ^^^^^^ the trait `futures_core::stream::Stream` is not implemented for `std::string::String`
  |
  = help: the following other types implement trait `futures_core::stream::Stream`:
            &mut S
            Abortable<St>
            AssertUnwindSafe<S>
            Box<S>
            Buffer<S, Item>
            BufferUnordered<St>
            Buffered<St>
            Either<A, B>
          and $N others
note: required by a bound in `zod::zod_core::ast::Ref::new_stream_res`
 --> core/src/ast/schema/ref.rs
  |
  |     pub const fn new_stream_res<F, S, I>(_: &'static F) -> Self
  |                  -------------- required by a bound in this associated function
...
  |         S: futures::Stream<Item = I>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Ref::new_stream_res`
  = note: this error originates in the attribute macro `rpc` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `std::string::String: futures_core::stream::Stream` is not satisfied
   --> tests/ui/rpc/fail/sync_function_not_returning_stream.rs:8:8
    |
6   | #[rpc]
    | ------ required by a bound introduced by this call
7   | impl A {
8   |     fn test(&mut self) -> String {
    |        ^^^^ the trait `futures_core::stream::Stream` is not implemented for `std::string::String`
    |
    = help: the following other types implement trait `futures_core::stream::Stream`:
              &mut S
              Abortable<St>
              AssertUnwindSafe<S>
              Box<S>
              Buffer<S, Item>
              BufferUnordered<St>
              Buffered<St>
              Either<A, B>
            and $N others
    = note: required for `Pin<&mut std::string::String>` to implement `futures_core::stream::Stream`
note: required by a bound in `StreamExt::next`
   --> /home/nicolai/.cargo/registry/src/index.crates.io-6f17d22bba15001f/futures-util-0.3.28/src/stream/stream/mod.rs:249:22
    |
249 | pub trait StreamExt: Stream {
    |                      ^^^^^^ required by this bound in `StreamExt::next`
...
273 |     fn next(&mut self) -> Next<'_, Self>
    |        ---- required by a bound in this associated function
